syntax = "proto3";
package auth;
option go_package = "./pkg/pb";
service  AuthService {
    rpc Register(RegisterReq) returns (RegisterResp){}
    rpc Login(LoginReq) returns (LoginResp){}
    rpc Validate(ValidateReq) returns (ValidateResp){}

}


message RegisterReq{

    string username = 1;
    string email = 2;
    int64  role = 3;
    string password = 4;


}

message RegisterResp{
    int64 status = 1;
    string error = 2;

}
message LoginReq{

    string email = 1;
    string password = 2;

}

message LoginResp{

    int64 status = 1;
    string error = 2;
    string token = 3;

}
message ValidateReq{

    string token = 1;

}

message ValidateResp{

    int64 status = 1;
    string error = 2;
    int64 userId = 3;
    string username = 5;
    int64 role = 6;
}
